# deckchatbot-monorepo

./: .dockerignore  .env  .env.docker  .env.example  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .gitmodules  .ltlog.txt  .npmrc  .prettierrc  AZURE_SECRETS_SETUP.md  AlensDeckBot.code-workspace  Azureworkspaces.csv  CustomRoleDefinition.json  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCKER_BUILD_FIX.md  DOCKER_TROUBLESHOOTING.md  Deckchatbot_Deployment_Guide.md  Dockerfile  GIT_SETUP_INSTRUCTIONS.md  MIGRATION_GUIDE.md  Makefile  Modelfile  PROMPT.md  README-docker-fix.md  README.md  SOLUTION_SUMMARY.md  ULTIMATE_HYBRID_DOCKER_AZURE_IMPLEMENTATION.md  VISUAL_FEATURES_IMPLEMENTATION_SUMMARY.md  app.py  azure-pipelines.yml  azure_setup.sh  cloud-init.yaml  codex.md  comprehensive-validation-test.cjs  config.js  curl  (+48 more)
.idx/: dev.nix
__tests__/: chatbot.test.js  extractNumbers.test.js  measurements.test.js  shape.test.js  skirting.test.js  steps.test.js
apps/ai-service/: Dockerfile  README.md  convert_deps.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_consolidation.py  test_enhancements.py
apps/ai-service/ai_service/: __init__.py  blueprint.py  core.py  difix_service.py  image_processing.py  main.py  vector_db_service.py  whisper_service.py
apps/app2/: Dockerfile  main.py  pyproject.toml
apps/backend/: Dockerfile  cloud-init.yaml  db.js  entrypoint.sh  package-lock.json  package.json  pyproject.toml  routes.js  server.js  test.txt  tsconfig.json  visionRouter.js
apps/backend/api/routes/: analyze.py
apps/backend/app2/: pyproject.toml
apps/backend/backend-ai/API/: api.py
apps/backend/backend_ai/: main.py
apps/backend/llama_integration/: llava_runner.py  predict.py
apps/backend/middleware/: rateLimiting.js  security.js
apps/backend/services/: dataRetentionService.js
apps/backend/src/: index.ts  simple-test.js  test-utils.ts
apps/backend/src/controllers/: chat-controller.ts  deck-controller.ts  upload-controller.ts  visualization-controller.ts
apps/backend/src/middleware/: error-handler.ts  file-upload.ts  rate-limiter.ts  test-middleware.ts
apps/backend/src/routes/: chat-routes.ts  deck-routes.ts  index.ts  upload-routes.ts  visualization-routes.ts
apps/backend/src/services/: azure-computer-vision.ts  azure-config.ts  azure-cosmos.ts  azure-openai.ts  azure-services-test.ts  azure-storage.ts
apps/backend/src/types/: azure.ts  deckchatbot.ts  index.ts  test-types.ts  visual.ts
apps/backend/src/utils/: image-processor.ts  logger.ts  validation.ts
apps/backend/utils/: cache.js  dataProtection.js  db.js  tmp-cleaner.js
aws/: .env.aws.example  README.md
azure/: deploy-hybrid.sh  setup-infrastructure.sh
azure-legacy/: azure-static-web-apps-nice-glacier-09766bd10.yml  azure_setup.sh  deploy.yml
backend/: Dockerfile  README.md  package.json  pyproject.toml  routes.js  visionRouter.js
backend-ai/: Dockerfile  README.md  app.py  pyproject.toml  pyvenv.cfg
backend-fastapi/: dockerfile
backend/API/: api.py
backend/Scripts/: activate.fish
backend/app2/: main.py  pyproject.toml  requirements.txt
backend/app2/app2/: main.py
backend/app2/controllers/: helloController.js
backend/backend-ai/: .dockerignore  .gitignore  Dockerfile  README.md  base.txt  cloud-init.yaml  dev.txt  entrypoint.sh  main.py  pyproject.toml  pyvenv.cfg  visionRouter.js
backend/backend-ai/API/: api.py
backend/backend-ai/Scripts/: activate.bat  activate.fish
backend/backend-ai/ai-service/: Dockerfile  dockerfile  entrypoint.sh  llava_handler.py  main.py  pyproject.toml
backend/backend-ai/ai-service/app2/: main.py
backend/backend-ai/ai_service/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/backend-ai/ai_service/ai_service/: main.py
backend/backend-ai/api/routes/: analyze.py
backend/backend-ai/backend_ai/: main.py
backend/backend-ai/llama_integration/: predict.py
backend/deckchatbot_backend/: .env.example  main.py  requirements.txt
backend/fastapi-deckbot/: main.py
codex-main/: AGENTS.md  pnpm-lock.yaml
config/: index.js  jest.config.js  package-lock.json  pyproject.toml
controllers/: chatbotController.js  deckCalcController.js  digitalizeController.js  drawingUploadController.js  measurementController.js  multishapeController.js  shapeController.js  skirtingController.js
deckchatbot-monorepo/: .gitignore  PROMPT.md  README.md
docker/: DOCKER_API_500_COMPLETE_FIX.md  DOCKER_API_FIX_GUIDE.md  DOCKER_BUILD_SOLUTION.md  DOCKER_DAEMON_CONFIG.md  README.md  SUBNET_CONFIGURATION.md  TROUBLESHOOTING.md  WSL_CONFIGURATION.md  disable-wsl-login-message.sh  docker-api-fix.bat  docker-compose-improved.yml  docker-compose-simple.yml  docker-compose.yml  fix-docker-admin.ps1  fix-docker-api-issues.ps1  fix-docker-network.ps1  set-docker-env.bat  test-subnet-config.ps1
docs/: AZURE_SERVICE_REPLACEMENTS.md  MASTER_PROMPT.md  MEASUREMENT_EXTRACTION.md  MODULE_CONVERSION_RULES.md  README.md  ai_enhancements.md  api-documentation.md  aws-quick-reference.md  aws-step-by-step-guide.md  azure-vm-setup.md  ci-cd-guide.md  codex.md  cost-effective-deployment-alternatives.md  deployment-status.md  disk-space-management.md  docker-daemon-configuration.md  docker-optimizations.md  docker_healthcheck.md  hetzner-deployment-guide.md  hetzner-getting-started.md  load-balancer-guidance.md  powershell-deployment-guide.md  project-structure.md  security-audit-report.md  ssh-setup-guide.md  tasks.md  troubleshooting-quick-reference.md  user-guide.md
frontend/: .dockerignore  .env  .gitignore  .npmrc  Dockerfile  README.md  babylonScene.js  config.js  docker-compose.yml  index.js  jest.config.js  memory.js  package-lock.json  package.json  server.cjs  server.js  style.css  test-setup.js  upload.html  upload.js  webpack.config.js
llama_integration/: predict.py
middleware/: auth.js  errorLogger.js  rateLimiter.js  requestLogger.js
new website implements/: ALENS_DECK_BOT_Brand_Guidelines.md  (+3 more)
shared/libs/lib2/: __init__.py  my_helper.py  pyproject.toml
shared/libs/lib2/lib2/: my_helper.py  square_footage.py
(+317 files in other folders)
