[tool.poetry]
name = "deckchatbot-monorepo"
version = "0.1.0"
description = "Monorepo for DeckChatBot projects"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26"

[tool.poetry.dev-dependencies]
pytest = "^6.2"


[tool.poetry.group.app.dependencies]
app1 = { path = "backend/backend-ai", develop = true }
app2 = { path = "apps/app2", develop = true }

[tool.poetry.group.lib.dependencies]
lib1 = { path = "backend/backend-ai/ai-service", develop = true }
lib2 = { path = "libs/lib2", develop = true }

[tool.poetry-monorepo-dependency-plugin]
enable = true
