[tool.poetry]
name = "deckchatbot-monorepo"
version = "0.1.0"
description = "Monorepo for DeckChatBot projects"
authors = ["Your Name <you@example.com>"]
package-mode = false  


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

# Removed local package dependencies from root pyproject.toml as they are managed by sub-projects
# [tool.poetry.group.app.dependencies]
# backend-ai = { path = "apps/backend", develop = true }
# app2 = { path = "apps/backend/app2", develop = true }

# [tool.poetry.group.lib.dependencies]
# ai-service = { path = "apps/ai-service", develop = true }
# lib2 = { path = "shared/libs/lib2", develop = true }

[tool.poetry-monorepo-dependency-plugin]
enable = false
