[tool.poetry]
name = "deckbot-ai-backend"
version = "0.1.0"
description = "AI backend for deckchatbot"
authors = ["Alens <icjalenz@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "*"
transformers = "*"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic = "*"
pillow = "*"
numpy = "*"
scipy = "*"

[tool.poetry.group.dev.dependencies]
pyright = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
