[tool.poetry]
name = "backend-ai"
version = "0.1.0"
description = "FastAPI proxy backend for DeckChatbot"
authors = ["Your Name <you@example.com>"]
packages = [{include = "backend_ai"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core FastAPI stack
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9" # Updated to resolve conflict
ai-service = { path = "../../apps/ai-service" } # Modified: Removed develop = true
lib2 = { path = "../../shared/libs/lib2" } # Modified: Removed develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
