[tool.poetry]
name = "app1"
version = "0.1.0"
description = "FastAPI backend for DeckChatbot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.27.0"
python-multipart = "^0.0.6"
lib1 = { path = "./ai-service", develop = true }
lib2 = { path = "../../lib2", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
