[tool.poetry]
name = "backend-ai"
version = "0.1.0"
description = "FastAPI proxy backend for DeckChatbot"
authors = ["Your Name <you@example.com>"]
packages = [{include = "backend_ai"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core FastAPI stack
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
httpx = "^0.27.0"
python-multipart = "^0.0.18"

# Local monorepo packages
lib2 = { path = "libs/lib2", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
