[tool.poetry]
name = "app2"
version = "0.1.0"
description = "Application 2 for DeckChatBot"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app2"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26"
ai-service = { path = "../../apps/ai-service", develop = true } # Corrected path

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
