[tool.poetry]
name = "deckbot-ai-service"
version = "0.1.0"
description = "AI image processing service for DeckChatbot"
authors = ["DeckChatbot Team <none@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}
pillow = "*"
pytesseract = "*"
python-multipart = "*"
requests = "*"
pydantic = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
