[tool.poetry]
name = "ai-service"
packages = [{include = "ai_service"}]
version = "0.1.0"
description = "AI service for deck image processing"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# When packaged in Docker the libs directory is copied adjacent to this
# pyproject, so we reference it relative to the working directory.
lib2 = { path = "libs/lib2", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
