[tool.poetry]
name = "lib2"
version = "0.1.0"
description = "Shared utilities for DeckChatbot"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "." },
]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
